Day22 Refactored `Paths.get` to `Path.of`