@@ -1,11 +1,11 @@
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 
 public class Day02 {
     public static void main(final String[] args) throws IOException {
-        final var lines = Files.readAllLines(Paths.get("resources/day02.txt"));
+        final var lines = Files.readAllLines(Path.of("resources/day02.txt"));
         
         System.out.println(part1(lines));
         System.out.println(part2(lines));
