@@ -1,6 +1,6 @@
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Comparator;
 import java.util.List;
 
@@ -23,7 +23,7 @@ public class Day07 {
     };
     
     public static void main(final String[] args) throws IOException {
-        final var lines = Files.readAllLines(Paths.get("resources/day07.txt"));
+        final var lines = Files.readAllLines(Path.of("resources/day07.txt"));
         
         System.out.println(part1(lines));
         System.out.println(part2(lines));
