@@ -3,7 +3,7 @@ import util.Point.Direction;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -11,7 +11,7 @@ import java.util.List;
 
 public class Day10 {
     public static void main(final String[] args) throws IOException {
-        final var lines = Files.readAllLines(Paths.get("resources/day10.txt"));
+        final var lines = Files.readAllLines(Path.of("resources/day10.txt"));
         
         System.out.println(part1(lines));
         System.out.println(part2(lines));
