@@ -2,14 +2,14 @@ import util.StringUtil;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 
 public class Day13 {
     
     public static void main(final String[] args) throws IOException {
-        final var lines = Files.readAllLines(Paths.get("resources/day13.txt"));
+        final var lines = Files.readAllLines(Path.of("resources/day13.txt"));
         
         System.out.println(part1(lines));
         System.out.println(part2(lines));
