@@ -1,6 +1,6 @@
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.LinkedHashMap;
@@ -8,7 +8,7 @@ import java.util.LinkedHashMap;
 public class Day15 {
     
     public static void main(final String[] args) throws IOException {
-        final var lines = Files.readAllLines(Paths.get("resources/day15.txt"));
+        final var lines = Files.readAllLines(Path.of("resources/day15.txt"));
         
         System.out.println(part1(lines.getFirst()));
         System.out.println(part2(lines.getFirst()));
