@@ -2,13 +2,13 @@ import util.Point;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.*;
 
 public class Day17 {
     
     public static void main(final String[] args) throws IOException {
-        final var lines = Files.readAllLines(Paths.get("resources/day17.txt"));
+        final var lines = Files.readAllLines(Path.of("resources/day17.txt"));
         
         System.out.println(part1(lines));
         System.out.println(part2(lines));
