@@ -2,18 +2,17 @@ import util.Pair;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayDeque;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-
 public class Day19 {
     
     public static void main(final String[] args) throws IOException {
-        final var lines = Files.readAllLines(Paths.get("resources/day19.txt"));
+        final var lines = Files.readAllLines(Path.of("resources/day19.txt"));
         
         System.out.println(part1(lines));
         System.out.println(part2(lines));
