@@ -2,7 +2,7 @@ import util.MathUtil;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayDeque;
 import java.util.HashMap;
 import java.util.List;
@@ -12,7 +12,7 @@ import java.util.stream.Collectors;
 public class Day20 {
     
     public static void main(final String[] args) throws IOException {
-        final var lines = Files.readAllLines(Paths.get("resources/day20.txt"));
+        final var lines = Files.readAllLines(Path.of("resources/day20.txt"));
         
         System.out.println(part1(lines));
         System.out.println(part2(lines));
